--- a/tasks/http_vhosts.yml
+++ b/tasks/http_vhosts.yml
@@ -1,22 +1,24 @@
-    
+---
+
 - name: "Build NGINX vhost templates"
-  template:
+  ansible.builtin.template:
+    mode: "0755"
     src: default.conf.j2
-    dest: "{{ nginx_base_cfg_dir }}/sites-available/{{ item.servername }}-{{ item.serverlisten|string|regex_search('([0-9]+)') }}"
-    owner: "{{ nginx_user|default(nginx_default_user) }}"
-    group: "{{ nginx_group|default(nginx_default_group) }}"
+    dest: "{{ nginx_base_cfg_dir }}/sites-available/{{ item.servername }}-{{ item.serverlisten | string | regex_search('([0-9]+)') }}"
+    owner: "{{ nginx_user | default(nginx_default_user) }}"
+    group: "{{ nginx_group | default(nginx_default_group) }}"
   loop: "{{ nginx_vhosts }}"
   loop_control:
     label: "{{ item.servername }}"
   notify: "restart_nginx"
 
 - name: "Activate vhost"
-  file:
-    dest: "{{ nginx_base_cfg_dir }}/sites-enabled/{{ item.servername }}-{{ item.serverlisten|string|regex_search('([0-9]+)') }}"
-    src: "{{ nginx_base_cfg_dir }}/sites-available/{{ item.servername }}-{{ item.serverlisten|string|regex_search('([0-9]+)') }}"
+  ansible.builtin.file:
+    dest: "{{ nginx_base_cfg_dir }}/sites-enabled/{{ item.servername }}-{{ item.serverlisten | string | regex_search('([0-9]+)') }}"
+    src: "{{ nginx_base_cfg_dir }}/sites-available/{{ item.servername }}-{{ item.serverlisten | string | regex_search('([0-9]+)') }}"
     state: link
-    owner: "{{ nginx_user|default(nginx_default_user) }}"
-    group: "{{ nginx_group|default(nginx_default_group) }}"
+    owner: "{{ nginx_user | default(nginx_default_user) }}"
+    group: "{{ nginx_group | default(nginx_default_group) }}"
   loop: "{{ nginx_vhosts }}"
   loop_control:
     label: "{{ item.servername }}"
