--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,18 +1,24 @@
 ---
+
 - name: Add the OS specific varibles
-  include_vars: "{{ ansible_os_family }}.yml"
+  ansible.builtin.include_vars: "{{ ansible_os_family }}.yml"
   tags:
     - always
 
-- import_tasks: installation.yml
-- import_tasks: configuration.yml
+- name: Import tasks
+  ansible.builtin.import_tasks: installation.yml
+
+- name: Import tasks
+  ansible.builtin.import_tasks: configuration.yml
   tags:
     - nginx-configure
 
-- import_tasks: install_fail2ban.yml
+- name: Import tasks
+  ansible.builtin.import_tasks: install_fail2ban.yml
   when: fail2ban_enable
 
-- import_tasks: configure_fail2ban.yml
+- name: Import tasks
+  ansible.builtin.import_tasks: configure_fail2ban.yml
   when: fail2ban_enable
   tags:
     - fail2ban-configure
